--- a/root-app/src/index.ejs
+++ b/root-app/src/index.ejs
@@ -85,6 +85,7 @@
   <body>
     <script>
       System.import("@faramin/root-config");
+      System.import("@faramin/styleguide");
     </script>
     <import-map-overrides-full
       show-when-local-storage="devtools"
